# Tttsvm

./: .gitignore  README.md  README_FISH_AUDIO.md  README_TEST.md  app.py  audio_converter.py  check_wav.py  fish_audio_server.py  main.py  pyproject.toml  quick_test.py  requirements.txt  start_as_admin.bat  start_fish_server.py  test.py  test_audio_conversion.py  test_config.py  test_config_example.py  test_fish_server.py
Util/: AudioPlayer.py  EnhancedHotKeyManager.py  FloatingTextInput.py  SystemTrayIcon.py  admin_utils.py  audio_converter.py  fish_audio_server.py  globalHotKeyManager.py  loadSetting.py  tts.py
config/: config.ini  config.ini.template
test_output/: quick_test.opus
